--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a href="#" class="header__link"> Узнать &rarr;</a></p>
       <img src="./images/header-image.png" alt="Иллюстрация Опять двойка" class="header__main-illustration">
-      <div class="header__square-pic figure-rotation"></div>
+      <div class="header__square-pic rotation"></div>
 
     </header>
     <main class="content">
@@ -64,10 +64,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" width="515" height="316"
-src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer1" width="515" height="316"
-src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer1" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         </div>
       </section>
 
@@ -134,13 +132,13 @@ src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
-кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <h3 class="khan__quote-author">Джордж Лукас</h3>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/images_sprint-2/khan-book.jpg" alt="Книга Весь мир - школа" class="khan__book-pic">
-            <p class="khan__buy-link">Купить книгу &rarr;</p>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
       </section>
@@ -190,19 +188,19 @@ src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle figure-rotation"></div>
+        <div class="kaufman__triangle rotation"></div>
 
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav class="resources__logo-zone">
-          <a href="#"><img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Arzamas" class="resources__logo"></a>
-          <a href="#"><img src="./images/images_sprint-2/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a>
-          <a href="#"><img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a>
-          <a href="#"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a>
-        </nav>
+        <ul class="resources__logo-zone">
+          <li><a href="#"><img src="./images/images_sprint-2/logo/resources-arzamas.svg" alt="Arzamas" class="resources__logo"></a></li>
+          <li><a href="#"><img src="./images/images_sprint-2/logo/resources-n1.svg" alt="N+1" class="resources__logo"></a></li>
+          <li><a href="#"><img src="./images/images_sprint-2/logo/resources-strelka.svg" alt="Strelka" class="resources__logo"></a></li>
+          <li><a href="#"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
+        </ul>
       </section>
     </main>
     <footer class="footer">
