--- a/index.html
+++ b/index.html
@@ -202,6 +202,31 @@
           <li><a href="#"><img src="./images/images_sprint-2/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a></li>
         </ul>
       </section>
+
+      <section class="form">
+        <div class="form__container">
+          <form class="form__admin">
+            <h3 class="form__heading">Добавить комментарий</h3>
+            <fieldset class="form__input_container">
+              <label for="comment" class="form__label">Комментарий</label>
+              <textarea class="form__item form__item_comment" id="comment" name="comment" placeholder="Здесь будет ваш комментарий" required></textarea>
+              <div class="form__info">
+                <label for="user-name" class="form__label">Имя*
+                <input type="text" class="form__item" id="user-name" name="user-name" placeholder="Введите ваше имя" required>
+                </label>
+                <label for="email" class="form__label">E-mail*
+                <input type="email" class="form__item" id="email" name="email" placeholder="Введите вашу почту" required>
+                </label>
+              </div>
+              </fieldset>
+
+            <fieldset class="form__handlers">
+              <input type="submit" class="form__button">
+              <input type="reset" class="form__button">
+            </fieldset>
+          </form>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
